--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-elements": "^3.4.3",
+    "react-native-iframe-youtube-player": "^0.1.4",
     "react-native-paper": "^5.12.3",
-    "react-native-vector-icons": "^10.0.3"
+    "react-native-vector-icons": "^10.0.3",
+    "react-native-youtube-iframe": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
