--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
     "splash": {
       "image": "./assets/logo.jpeg",
       "resizeMode": "contain",
-      "backgroundColor": "#0000000"
+      "backgroundColor": "black"
     },
     "assetBundlePatterns": [
       "**/*"
@@ -20,7 +20,7 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/logo.jpeg",
-        "backgroundColor": "#000000"
+        "backgroundColor": "black"
       }
     },
     "web": {
