--- a/package.json
+++ b/package.json
@@ -3,40 +3,43 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start -c",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.22.3",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/bottom-tabs": "^6.5.14",
     "@react-navigation/drawer": "^6.6.11",
     "@react-navigation/material-top-tabs": "^6.6.10",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.20",
     "axios": "^1.6.7",
-    "expo": "~50.0.8",
+    "expo": "~50.0.11",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.8.1",
+    "install": "^0.13.0",
+    "npm": "^10.5.0",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-element-dropdown": "^2.10.1",
     "react-native-elements": "^3.4.3",
     "react-native-flash-message": "^0.4.2",
-    "react-native-gesture-handler": "^2.15.0",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-pager-view": "^6.2.3",
     "react-native-paper": "^5.12.3",
-    "react-native-reanimated": "3.7.2",
-    "react-native-safe-area-context": "4.9.0",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "~4.8.0",
     "react-native-screens": "^3.29.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-webview": "13.8.1",
+    "react-native-webview": "~13.6.4",
     "react-native-youtube-iframe": "^2.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "react-native-dotenv": "^3.4.11"
   },
   "private": true
 }
