--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/k2d": "^0.2.3",
+    "@expo-google-fonts/poppins": "^0.2.3",
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/bottom-tabs": "^6.5.14",
     "@react-navigation/drawer": "^6.6.11",
@@ -17,6 +19,8 @@
     "@react-navigation/native-stack": "^6.9.20",
     "axios": "^1.6.7",
     "expo": "~50.0.11",
+    "expo-app-loading": "^2.1.1",
+    "expo-font": "^11.10.3",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.8.1",
     "install": "^0.13.0",
